--- a/common/pom.xml
+++ b/common/pom.xml
@@ -30,5 +30,14 @@
             <version>${version.picocli}</version>
             <scope>compile</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
     </dependencies>
 </project>
