--- a/pom.xml
+++ b/pom.xml
@@ -30,9 +30,9 @@
     </properties>
 
     <scm>
-        <connection>scm:git:git://git@github.com:instaclustr/cassandra-exporter.git</connection>
-        <developerConnection>scm:git:ssh://github.com/instaclustr/cassandra-exporter.git</developerConnection>
-        <url>git://github.com/instaclustr/cassandra-exporter.git</url>
+        <connection>scm:git:git@github.com:eperott/cassandra-exporter.git</connection>
+        <developerConnection>scm:git:git@github.com:eperott/cassandra-exporter.git</developerConnection>
+        <url>git://github.com/eperott/cassandra-exporter</url>
         <tag>HEAD</tag>
     </scm>
 
