--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>com.zegelin.cassandra-exporter</groupId>
     <artifactId>exporter-parent</artifactId>
-    <version>0.9.9-E001</version>
+    <version>0.9.9-E002-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Cassandra Exporter Parent</name>
@@ -33,7 +33,7 @@
         <connection>scm:git:git@github.com:eperott/cassandra-exporter.git</connection>
         <developerConnection>scm:git:git@github.com:eperott/cassandra-exporter.git</developerConnection>
         <url>git://github.com/eperott/cassandra-exporter</url>
-        <tag>v0.9.9-E001</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <dependencyManagement>
@@ -41,7 +41,7 @@
             <dependency>
                 <groupId>com.zegelin.cassandra-exporter</groupId>
                 <artifactId>common</artifactId>
-                <version>0.9.9-E001</version>
+                <version>0.9.9-E002-SNAPSHOT</version>
                 <exclusions>
                     <exclusion>
                         <groupId>org.glassfish.hk2.external</groupId>
