--- a/common/pom.xml
+++ b/common/pom.xml
@@ -18,11 +18,21 @@
     </properties>
 
     <dependencies>
+        <!-- Bring in improved resource leak detection in netty for utests. See #46-->
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.0.53.Final</version>
+            <scope>provided</scope>
+        </dependency>
+
+
         <dependency>
             <groupId>org.apache.cassandra</groupId>
             <artifactId>cassandra-all</artifactId>
             <scope>provided</scope>
         </dependency>
+
 
         <dependency>
             <groupId>info.picocli</groupId>
