--- a/common/pom.xml
+++ b/common/pom.xml
@@ -19,6 +19,7 @@
 
     <dependencies>
         <!-- Bring in improved resource leak detection in netty for utests. See #46-->
+        <!-- Bring in improved tcnative detection in netty for utests-->
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-all</artifactId>
@@ -60,6 +61,13 @@
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
             <version>3.12.0</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-tcnative-boringssl-static</artifactId>
+            <version>2.0.28.Final</version>
             <scope>test</scope>
         </dependency>
 
