--- a/common/pom.xml
+++ b/common/pom.xml
@@ -5,11 +5,11 @@
     <parent>
         <groupId>com.zegelin.cassandra-exporter</groupId>
         <artifactId>exporter-parent</artifactId>
-        <version>0.9.9-E004</version>
+        <version>0.9.9-E005-SNAPSHOT</version>
     </parent>
 
     <artifactId>common</artifactId>
-    <version>0.9.9-E004</version>
+    <version>0.9.9-E005-SNAPSHOT</version>
 
     <name>Cassandra Exporter Common</name>
 
