--- a/standalone/pom.xml
+++ b/standalone/pom.xml
@@ -5,11 +5,11 @@
     <parent>
         <groupId>com.zegelin.cassandra-exporter</groupId>
         <artifactId>exporter-parent</artifactId>
-        <version>0.9.11-SNAPSHOT</version>
+        <version>0.9.10-E001</version>
     </parent>
 
     <artifactId>standalone</artifactId>
-    <version>0.9.11-SNAPSHOT</version>
+    <version>0.9.10-E001</version>
 
     <name>Cassandra Exporter Standalone/CLI</name>
 
