--- a/agent/pom.xml
+++ b/agent/pom.xml
@@ -5,11 +5,11 @@
     <parent>
         <groupId>com.zegelin.cassandra-exporter</groupId>
         <artifactId>exporter-parent</artifactId>
-        <version>0.9.10-E001</version>
+        <version>0.9.10-E002-SNAPSHOT</version>
     </parent>
 
     <artifactId>agent</artifactId>
-    <version>0.9.10-E001</version>
+    <version>0.9.10-E002-SNAPSHOT</version>
 
     <name>Cassandra Exporter Agent</name>
 
